--- a/Proyecto_final(E1)/.project
+++ b/Proyecto_final(E1)/.project
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <projectDescription>
-	<name>Proyecto_final(E1)</name>
+	<name>ProyectoFinal_Equipo1</name>
 	<comment></comment>
 	<projects>
 	</projects>
